# itmo_math_stat

./: README.md  pyproject.toml
homework_1/: HW_1.ipynb
homework_2/: HW_2.ipynb
homework_3/: HW_3.ipynb
homework_4/: HW_4.ipynb
