[tool.poetry]
name = "itmo-math-stat"
version = "0.1.0"
description = ""
authors = ["nikolai hilkovich <n.hilkovich@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
scipy = "^1.14.1"
ipywidgets = "^8.1.5"
xlrd = "^2.0.1"
statsmodels = "^0.14.4"
tqdm = "^4.66.6"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
